[metadata]
name = libtracy
fullname = BACT epics archiver appliance access
version = 3.5.0
url =  https://github.com/jbengtsson/tracy-3.5
author = Johan Bengtsson
author_email = johan.bengtsson@helmholtz-berlin.de
description = Self-Consistent Symplectic Integrator for charged particle beam dynamics.
long_description = file: README.rst
classifiers =
	 Development Status :: 4 - Beta
         Intended Audience :: Science/Research
         License :: OSI Approved :: GNU General Public License (GPL)
         Programming Language :: Python :: 3
         Topic :: Scientific/Engineering :: Physics

[build-system]
requires = ["setuptools", "wheel", "pybind11>=2.6.0"]
